Creates AXPosition to uniquely identify a position in the accessibility tree.

TESTED=manually, unit tests
BUG=644604,530826
R=dmazzoni@chromium.org, dtseng@chromium.org, avi@chromium.org, ellyjones@chromium.org

Review-Url: https://chromiumcodereview.appspot.com/2271893002
Cr-Commit-Position: refs/heads/master@{#426906}

Former-commit-id: 9de71d4067f24c4e333b5bef4f1210c9395ba847